# CMakeTemplate

Common/: RRLogger.h
Demo/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  demo_unittest.cpp  test_demo.cpp
Demo/include/: demo.h
Demo/src/: demo.cpp
